--- a/templates/client/index.html.twig
+++ b/templates/client/index.html.twig
@@ -6,6 +6,7 @@
     {% for cli in clients %}
         <div>
             {{ cli.nom }}
+            {{ cli.prenom }}
         </div>
     {% endfor %}
 
