--- a/templates/client/new.html.twig
+++ b/templates/client/new.html.twig
@@ -2,5 +2,12 @@
 
 {% block body %}
     <h1>Titre page2 - new</h1>
+
+    <form method="POST">
+        Nom <input type="text" name="nom" id="">
+        Prenom <input type="text" name="prenom" id="">
+        <input type="submit" value="Enregistrer" id="">
+
+    </form>
 {% endblock %}
 
