add file in form

--- a/templates/client/new2.html.twig
+++ b/templates/client/new2.html.twig
@@ -12,7 +12,7 @@
 
     {{ form_widget(formClient.prenom) }}
 
-
+    {# {% do formClient.photo.setRendered() %} #}
 
     {{ form_end(formClient) }}
 
