--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,10 +14,10 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <nav class="navbar navbar-expand-sm navbar-light bg-light">
                         <div class="container-fluid">
                             <a class="navbar-brand" href="#">Navbar</a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,16 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/new">New</a>
                                 </li>
-                                
+                                {% if app.user %}
+                                    <li class="nav-item">
+                                        {{ app.user.email }}
+                                        <a class="nav-link" href="/logout">Logout</a>
+                                    </li>
+                                {% else %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/login">login</a>
+                                    </li>
+                                {% endif %}
                             </ul>
                             
                             </div>
